--- a/app/views/admin/plugins/new.html.erb
+++ b/app/views/admin/plugins/new.html.erb
@@ -1,8 +1,8 @@
 <div class="card-title">Install Plugin</div>
 <%= form_for User.new, url: admin_plugins_path, method: :post, html: { enctype: "multipart/form-data" } do |f| %>
   <div class="form-group">
-    <label class="control-label">Select plugin zip</label>
-    <input name="file" type="file" accept="*.zip" class="form-control" />
+    <label class="form-label">Select plugin zip</label>
+    <input name="file" type="file" accept="*.zip" class="form-control">
     <div class="form-text">Please select the Homeland plugin zip package and install it. Do not install non-Homeland plugins, otherwise it will cause unexpected problems!</div>
   </div>
   <div class="form-actions">
