--- a/app/views/admin/plugins/show.html.erb
+++ b/app/views/admin/plugins/show.html.erb
@@ -2,7 +2,7 @@
   <div><%= icon_tag("plug") %> <%= @plugin.display_name %></div>
   <div class="counter"><%= @plugin.version %></div>
   <div class="actions">
-    <%= link_to t("common.back"), admin_plugins_path, class: "btn btn-default btn-sm" %>
+    <%= link_to t("common.back"), admin_plugins_path, class: "btn btn-secondary btn-sm" %>
   </div>
 </div>
 <form class="form">
