--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -3,22 +3,13 @@
 <% end %>
 <div class="toolbar">
   <form class="form-inline" action="<%= admin_users_path %>">
-    <div class="form-group mr-sm-2">
-      <%= select_tag(:field, options_for_select([['Username','login'], ['Email','email'], ['Name','name']], params[:field]), class: 'form-control') %>
-    </div>
-    <div class="form-group mr-sm-2">
-      <input type="text" name="q" class="form-control" value="<%= params[:q] %>" placeholder="Search" />
-    </div>
-    <div class="form-group mr-sm-2">
-      <%= select_tag(:type, options_for_select([['All',''], ['Team','Team']], params[:type]), class: 'form-control') %>
-    </div>
-    <div class="form-group mr-sm-2">
-      <%= select_tag(:state, options_for_select(User.state_options, params[:state]), class: 'form-control', include_blank: "All state") %>
-    </div>
-    <button class="btn btn-default">Search</button>
+    <%= select_tag(:field, options_for_select([['Username','login'], ['Email','email'], ['Name','name']], params[:field]), class: 'form-control') %>
+    <input type="text" name="q" class="form-control" value="<%= params[:q] %>" placeholder="Search">
+    <%= select_tag(:type, options_for_select([['All',''], ['Team','Team']], params[:type]), class: 'form-control') %>
+    <%= select_tag(:state, options_for_select(User.state_options, params[:state]), class: 'form-control', include_blank: "All state") %>
+    <button class="btn btn-secondary">Search</button>
   </form>
 </div>
-
 <table class="table table-bordered table-striped table-condensed">
   <tr class="head">
     <td class="first">#</td>
@@ -26,7 +17,6 @@
     <td>User Info</td>
     <td></td>
   </tr>
-
   <%= render collection: @users, partial: "user", as: :user %>
 </table>
 <%= paginate @users %>
