--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -49,7 +49,7 @@ end
           <div class="form-group">
             <div class="custom-control custom-checkbox custom-checkbox-lg">
               <%= f.check_box :email_public, checked: true, class: "custom-control-input" %>
-              <label for="user_email_public"  class="custom-control-label"><%= t("activerecord.attributes.user.email_public") %></label>
+              <label for="user_email_public"  class="custom-form-label"><%= t("activerecord.attributes.user.email_public") %></label>
             </div>
           </div>
           <%= form_group(f, :password) do %>
