--- a/app/views/team_users/index.html.erb
+++ b/app/views/team_users/index.html.erb
@@ -1,10 +1,8 @@
 <% title_tag t('teams.users') %>
-
 <%= render '/teams/header' %>
-
 <div class="card team-users">
   <% if can? :update, @team %>
-  <div class="card-header"><%= link_to t('teams.new_team_user'), new_user_team_user_path(@team), class: 'btn btn-default' %></div>
+    <div class="card-header"><%= link_to t('teams.new_team_user'), new_user_team_user_path(@team), class: 'btn btn-secondary' %></div>
   <% end %>
   <div class="card-body">
     <table class="table table-striped">
