--- a/app/views/topics/_ban.html.erb
+++ b/app/views/topics/_ban.html.erb
@@ -2,28 +2,28 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <%= form_for('', url: action_topic_path(topic, type: "ban"), method: "POST", remote: true) do |f| %>
-      <div class="modal-header">
-        <div class="modal-title"><%= t("topics.ban_title") %></div>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      </div>
-      <div class="modal-body">
-        <div class="form-group">
-          <select class="form-control" onchange="$('#ban-modal textarea').val($(this).val())" name="reason">
-            <option value="" selected><%= t("topics.ban_directly") %></option>
-            <% Setting.ban_reasons.each do |str| %>
-            <option value="<%= str %>"><%= str %></option>
-            <% end %>
-          </select>
+        <div class="modal-header">
+          <div class="modal-title"><%= t("topics.ban_title") %></div>
+          <button type="button" class="close" data-bs-dismiss ="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         </div>
-        <div class="form-group">
-          <label><%= t("topics.ban_with_reason") %></label>
-          <textarea class="form-control" name="reason_text" rows="4"></textarea>
+        <div class="modal-body">
+          <div class="form-group">
+            <select class="form-control" onchange="$('#ban-modal textarea').val($(this).val())" name="reason">
+              <option value="" selected><%= t("topics.ban_directly") %></option>
+              <% Setting.ban_reasons.each do |str| %>
+                <option value="<%= str %>"><%= str %></option>
+              <% end %>
+            </select>
+          </div>
+          <div class="form-group">
+            <label><%= t("topics.ban_with_reason") %></label>
+            <textarea class="form-control" name="reason_text" rows="4"></textarea>
+          </div>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="submit" class="btn btn-primary"><%= t("common.ok") %></button>
-        <a class="btn btn-default" data-dismiss="modal"><%= t("common.cancel") %></a>
-      </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-primary"><%= t("common.ok") %></button>
+          <a class="btn btn-secondary" data-bs-dismiss ="modal"><%= t("common.cancel") %></a>
+        </div>
       <% end %>
     </div>
   </div>
