--- a/app/views/topics/_buttons.html.erb
+++ b/app/views/topics/_buttons.html.erb
@@ -4,10 +4,9 @@
     <%= topic_follow_tag(@topic) %>
     <%= topic_favorite_tag(@topic) %>
   <% end %>
-
   <div class="pull-right">
     <div class="dropdown">
-      <a href="#" data-toggle="dropdown">
+      <a href="#" data-bs-toggle ="dropdown">
         <%= icon_tag("ellipsis-v") %>
       </a>
       <%= render "menu" %>
