--- a/app/views/topics/_topic_sidebar.html.erb
+++ b/app/views/topics/_topic_sidebar.html.erb
@@ -16,7 +16,7 @@
             <%= topic_favorite_tag(@topic) %>
             <% if can?(:manage, @topic) || can?(:close, @topic) %>
               <span class="dropdown">
-                <a href="#" data-toggle="dropdown">
+                <a href="#" data-bs-toggle ="dropdown">
                   <%= icon_tag("ellipsis-v") %>
                 </a>
                 <%= render "menu" %>
@@ -25,11 +25,11 @@
           </div>
         </div>
       </div>
-      <hr />
+      <hr>
       <div class="group">
         <%= social_share_button_tag h("#{@topic.title}") %>
       </div>
-      <hr />
+      <hr>
       <div class="reply-buttons">
         <div class="total">
           <%= t("topics.total_replies_html", count: @topic.replies_count) %>
