--- a/app/views/admin/nodes/_form.html.erb
+++ b/app/views/admin/nodes/_form.html.erb
@@ -1,23 +1,19 @@
 <%= form_for [:admin,@node] do |f| %>
   <%= render 'shared/error_messages', target: @node %>
-
   <div class="form-group">
     <%= f.label :name %>
     <%= f.text_field :name, class: "form-control" %>
   </div>
-
   <div class="form-group">
     <%= f.label :sort %>
     <%= f.text_field :sort, class: "form-control" %>
   </div>
-
   <div class="form-group">
     <%= f.label :summary %>
     <%= f.text_area :summary, class: "form-control" %>
   </div>
-
   <div class="form-actions">
     <%= f.submit t("common.save"), class: "btn btn-primary", 'data-disable-with' => t("common.saving") %>
-    <%= link_to 'Back', admin_nodes_path %>
+    <%= link_to t("common.cancel"), admin_nodes_path, class: "btn btn-secondary" %>
   </div>
 <% end %>
