--- a/app/views/admin/replies/index.html.erb
+++ b/app/views/admin/replies/index.html.erb
@@ -1,20 +1,13 @@
 <% content_for :sitemap do %>
   <span class="current"><%= t('admin.menu.replies') %></span>
 <% end %>
-
 <div class="toolbar">
   <form class="form-inline" action="<%= admin_replies_path %>">
-    <div class="form-group mr-sm-2">
-      <input type="text" name="q" class="form-control" value="<%= params[:q] %>" placeholder="Title" />
-    </div>
-    <div class="form-group mr-sm-2">
-      <input type="text" name="login" class="form-control" value="<%= params[:login] %>" placeholder="Username" />
-    </div>
-    <button class="btn btn-default">Search</button>
+    <input type="text" name="q" class="form-control" value="<%= params[:q] %>" placeholder="Title">
+    <input type="text" name="login" class="form-control" value="<%= params[:login] %>" placeholder="Username">
+    <button class="btn btn-secondary">Search</button>
   </form>
 </div>
-
-
 <table class="table table-bordered table-striped table-condensed">
   <tr class="head">
     <td class="first">#</td>
@@ -24,28 +17,26 @@
     <td>Time</td>
     <td></td>
   </tr>
-
-<% @replies.each do |reply| %>
-  <tr id="reply-<%= reply.id %>" class="<%= 'deleted' if !reply.deleted_at.blank? %>">
-    <td class="first"><%= reply.id %></td>
-    <td><%= truncate(reply.body, length: 50) %></td>
-    <% if reply.topic %>
-      <td>
+  <% @replies.each do |reply| %>
+    <tr id="reply-<%= reply.id %>" class="<%= 'deleted' if !reply.deleted_at.blank? %>">
+      <td class="first"><%= reply.id %></td>
+      <td><%= truncate(reply.body, length: 50) %></td>
+      <% if reply.topic %>
+        <td>
           <%= link_to(reply.topic_id, topic_path(reply.topic_id), title: reply.topic.title)%>
-      </td>
+        </td>
       <% else %>
-      <td><%= reply.topic_id %></td>
+        <td><%= reply.topic_id %></td>
       <% end %>
-    <td><%= link_to(reply.user.login, edit_admin_user_path(reply.user_id), target: "_blank") if reply.user %></td>
-    <td><%= l reply.created_at, format: :short %></td>
-    <td><%= link_to '', edit_admin_reply_path(reply), class: "fa fa-edit" %>
-    <% if reply.deleted_at.blank? %>
-      <%= link_to '', admin_reply_path(reply), 'data-confirm' => 'Are you sure?', method: :delete, remote: true, class: "fa fa-trash" %></td>
-    <% else %>
-      <%= link_to "", revert_admin_reply_path(reply), title: t("common.revert"), 'data-confirm' => 'Are you sure?', method: :post, class: "fa fa-undo" %>
-    <% end %>
-  </tr>
-<% end %>
+      <td><%= link_to(reply.user.login, edit_admin_user_path(reply.user_id), target: "_blank") if reply.user %></td>
+      <td><%= l reply.created_at, format: :short %></td>
+      <td><%= link_to '', edit_admin_reply_path(reply), class: "fa fa-edit" %>
+        <% if reply.deleted_at.blank? %>
+          <%= link_to '', admin_reply_path(reply), 'data-confirm' => 'Are you sure?', method: :delete, remote: true, class: "fa fa-trash" %></td>
+      <% else %>
+        <%= link_to "", revert_admin_reply_path(reply), title: t("common.revert"), 'data-confirm' => 'Are you sure?', method: :post, class: "fa fa-undo" %>
+      <% end %>
+    </tr>
+  <% end %>
 </table>
 <%= paginate @replies %>
-
