--- a/app/views/admin/topics/edit.html.erb
+++ b/app/views/admin/topics/edit.html.erb
@@ -1,12 +1,8 @@
 <% content_for :sitemap do %>
   <a href="<%= admin_topics_path %>"><%= t("admin.menu.topics")%></a> <i class="fa fa-angle-right"></i> <span class="current"><%= t("common.edit")%></span>
 <% end %>
-
 <div class="flex aib">
   <h1><%= t("common.edit")%><%= t("admin.menu.topics") %></h1>
-  <%= link_to '返回', admin_topics_path, class: "btn btn-default btn-sm ml-2" %>
+  <%= link_to '返回', admin_topics_path, class: "btn btn-secondary btn-sm ml-2" %>
 </div>
-
 <%= render 'form' %>
-
-
