--- a/app/views/admin/topics/index.html.erb
+++ b/app/views/admin/topics/index.html.erb
@@ -3,13 +3,9 @@
 <% end %>
 <div class="toolbar">
   <form class="form-inline" action="<%= admin_topics_path %>">
-    <div class="form-group mr-sm-2">
-      <input type="text" name="q" class="form-control" value="<%= params[:q] %>" placeholder="Title" />
-    </div>
-    <div class="form-group mr-sm-2">
-      <input type="text" name="login" class="form-control" value="<%= params[:login] %>" placeholder="Username" />
-    </div>
-    <button class="btn btn-default">Search</button>
+    <input type="text" name="q" class="form-control" value="<%= params[:q] %>" placeholder="Title">
+    <input type="text" name="login" class="form-control" value="<%= params[:login] %>" placeholder="Username">
+    <button class="btn btn-secondary">Search</button>
   </form>
 </div>
 <table class="table table-bordered table-striped table-condensed">
@@ -24,35 +20,35 @@
   </tr>
   <% @topics.each do |topic| %>
     <tr class="<%= 'deleted' if !topic.deleted_at.blank? %> <%= 'ban' if topic.ban? %>">
-    <td class="first"><%= topic.id %></td>
-    <td>
-      <%= link_to truncate(topic.title, length: 30), topic, target: "_blank" %>
-    </td>
-    <td><%= topic.node&.name %></td>
-    <td><%= user_name_tag(topic.user) %></td>
-    <td><%= topic.replies_count %></td>
-    <td>
-      <% if topic.deleted_at.blank? %>
-        <%= l topic.created_at, format: :short %>
-      <% else %>
-        <%= link_to topic.who_deleted, user_path(topic.who_deleted) if not topic.who_deleted.blank? %> Deleted at <br />
-    <%= l topic.deleted_at, format: :short %>
+      <td class="first"><%= topic.id %></td>
+      <td>
+        <%= link_to truncate(topic.title, length: 30), topic, target: "_blank" %>
+      </td>
+      <td><%= topic.node&.name %></td>
+      <td><%= user_name_tag(topic.user) %></td>
+      <td><%= topic.replies_count %></td>
+      <td>
+        <% if topic.deleted_at.blank? %>
+          <%= l topic.created_at, format: :short %>
+        <% else %>
+          <%= link_to topic.who_deleted, user_path(topic.who_deleted) if not topic.who_deleted.blank? %> Deleted at <br>
+          <%= l topic.deleted_at, format: :short %>
+        <% end %>
+      </td>
+      <td>
+        <% if !topic.suggested_at.blank? %>
+          <%= link_to t("common.un_top"), unsuggest_admin_topic_path(topic), 'data-confirm' => 'Are you sure?', method: :post %>
+        <% else %>
+          <%= link_to t("common.place_top"), suggest_admin_topic_path(topic), 'data-confirm' => 'Are you sure?', method: :post %>
+        <% end %>
+        <%= link_to "", edit_admin_topic_path(topic), class: "fa fa-edit" %>
+        <% if topic.deleted_at.blank? %>
+          <%= link_to "", admin_topic_path(topic), 'data-confirm' => 'Are you sure?', method: :delete, class: "fa fa-trash" %>
+        <% else %>
+          <%= link_to "", revert_admin_topic_path(topic), title: t("common.revert"), 'data-confirm' => 'Are you sure?', method: :post, class: "fa fa-undo" %>
+        <% end %>
+      </td>
+    </tr>
   <% end %>
-</td>
-<td>
-  <% if !topic.suggested_at.blank? %>
-    <%= link_to t("common.un_top"), unsuggest_admin_topic_path(topic), 'data-confirm' => 'Are you sure?', method: :post %>
-  <% else %>
-    <%= link_to t("common.place_top"), suggest_admin_topic_path(topic), 'data-confirm' => 'Are you sure?', method: :post %>
-  <% end %>
-  <%= link_to "", edit_admin_topic_path(topic), class: "fa fa-edit" %>
-  <% if topic.deleted_at.blank? %>
-    <%= link_to "", admin_topic_path(topic), 'data-confirm' => 'Are you sure?', method: :delete, class: "fa fa-trash" %>
-  <% else %>
-    <%= link_to "", revert_admin_topic_path(topic), title: t("common.revert"), 'data-confirm' => 'Are you sure?', method: :post, class: "fa fa-undo" %>
-  <% end %>
-</td>
-</tr>
-<% end %>
 </table>
 <%= paginate @topics %>
