--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,23 +1,19 @@
 <% content_for :sitemap do %>
   <a href="<%= admin_users_path %>"><%= t("admin.menu.users")%></a> <i class="fa fa-angle-right"></i> <span class="current"><%= t("common.edit")%></span>
 <% end %>
-
 <% if @user.user_type == :user %>
-<div class="toolbar clearfix">
-  <span class="pull-right">
-   <%= link_to t('admin.users.Delete recent 10 photos'), clean_admin_user_path(@user, type: 'photos'),
-                method: 'delete', class: 'btn btn-warning',
+  <div class="toolbar">
+    <div class="form-inline">
+      <%= link_to t('admin.users.Delete recent 10 photos'), clean_admin_user_path(@user, type: 'photos'),
+                method: 'delete', class: 'btn btn-sm btn-outline-danger',
                 data: { confirm: 'This action is not recoverable, are you sure?' } %>
-
-    <%= link_to t('admin.users.Delete recent 10 topics'), clean_admin_user_path(@user, type: 'topics'),
-                method: 'delete', class: 'btn btn-warning',
+      <%= link_to t('admin.users.Delete recent 10 topics'), clean_admin_user_path(@user, type: 'topics'),
+                method: 'delete', class: 'btn btn-sm btn-outline-danger',
                 data: { confirm: 'This action is not recoverable, are you sure?' } %>
-
-    <%= link_to t('admin.users.Delete recent 10 replies'), clean_admin_user_path(@user, type: 'replies'),
-                method: 'delete', class: 'btn btn-warning',
+      <%= link_to t('admin.users.Delete recent 10 replies'), clean_admin_user_path(@user, type: 'replies'),
+                method: 'delete', class: 'btn btn-sm btn-outline-danger',
                 data: { confirm: 'This action is not recoverable, are you sure?' } %>
-  </span>
-</div>
+    </div>
+  </div>
 <% end %>
-
 <%= render 'form' %>
