--- a/app/views/doorkeeper/applications/_form.html.erb
+++ b/app/views/doorkeeper/applications/_form.html.erb
@@ -5,15 +5,15 @@
   <div class="card-body">
     <%= form_for(application, url: doorkeeper_submit_path(application), html: { role: 'form'}) do |f| %>
       <% if application.errors.any? %>
-        <div class="alert alert-danger" data-alert><p><%= t('doorkeeper.applications.form.error') %></p></div>
+        <div class="alert alert-danger" data-alert>
+          <p><%= t('doorkeeper.applications.form.error') %></p>
+        </div>
       <% end %>
-
       <%= content_tag :div, class: "form-group#{' has-error' if application.errors[:name].present?}" do %>
         <%= f.label :name %>
         <%= f.text_field :name, class: 'form-control' %>
         <%= doorkeeper_errors_for application, :name %>
       <% end %>
-
       <%= content_tag :div, class: "form-group#{' has-error' if application.errors[:confidential].present?}" do %>
         <label class="form-check-label">
           <%= f.check_box :confidential %>
@@ -24,24 +24,22 @@
           <%= raw t('doorkeeper.applications.help.confidential') %>
         </span>
       <% end %>
-
       <%= content_tag :div, class: "form-group#{' has-error' if application.errors[:redirect_uri].present?}" do %>
         <%= f.label :redirect_uri %>
         <%= f.text_area :redirect_uri, class: 'form-control' %>
         <%= doorkeeper_errors_for application, :redirect_uri %>
         <span class="form-text">
-           <%= t('doorkeeper.applications.help.redirect_uri') %>
-          </span>
+          <%= t('doorkeeper.applications.help.redirect_uri') %>
+        </span>
         <% if Doorkeeper.configuration.native_redirect_uri %>
-            <span class="form-text">
-              <%= raw t('doorkeeper.applications.help.native_redirect_uri', native_redirect_uri: "<code>#{ Doorkeeper.configuration.native_redirect_uri }</code>") %>
-            </span>
+          <span class="form-text">
+            <%= raw t('doorkeeper.applications.help.native_redirect_uri', native_redirect_uri: "<code>#{ Doorkeeper.configuration.native_redirect_uri }</code>") %>
+          </span>
         <% end %>
       <% end %>
-
       <div class="form-group">
         <%= f.submit t("common.save"), class: "btn btn-primary" %>
-        <%= link_to t("common.cancel"), oauth_applications_path, :class => "btn btn-default" %>
+        <%= link_to t("common.cancel"), oauth_applications_path, :class => "btn btn-secondary" %>
       </div>
     <% end %>
   </div>
