--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,24 +15,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset='utf-8' />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <meta charset='utf-8'>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="theme" content="<%= user_theme %>">
     <meta name="locale" content="<%= user_locale %>">
     <title><%= content_for?(:title) ? yield(:title) : Setting.app_name %></title>
     <meta name="apple-mobile-web-app-capable" content="no">
-    <meta content='True' name='HandheldFriendly' />
-    <link rel="alternate" type="application/rss+xml" title="订阅最新帖" href="<%= main_app.feed_topics_url %>" />
+    <meta content='True' name='HandheldFriendly'>
+    <link rel="alternate" type="application/rss+xml" title="订阅最新帖" href="<%= main_app.feed_topics_url %>">
     <%= stylesheet_pack_tag "front", "data-turbolinks-track": "reload" %>
     <%= stylesheet_pack_tag "turbolinks-app", 'data-turbolinks-track': 'reload' if turbolinks_app? %>
     <%= yield :stylesheets %>
     <%= action_cable_meta_tag %>
     <%= csrf_meta_tag %>
     <%= raw Setting.custom_head_html %>
-    <meta name="twitter:card" content="summary" />
-    <meta property="twitter:title" content="<%= @content_title || Setting.app_name %>" />
+    <meta name="twitter:card" content="summary">
+    <meta property="twitter:title" content="<%= @content_title || Setting.app_name %>">
     <% if @content_description %>
-    <meta property="twitter:description" content="<%= @content_description %>" />
+      <meta property="twitter:description" content="<%= @content_description %>">
     <% end %>
     <% if current_user %>
       <meta name="current-user" data-user-id="<%= current_user.id %>" data-user-login="<%= current_user.login %>" data-user-name="<%= current_user.name %>" data-user-email="<%= current_user.email %>" data-user-avatar-url="<%= current_user.avatar? ? current_user.avatar.url(:md) : current_user.letter_avatar_url(96) %>">
@@ -46,7 +46,7 @@
         <div class="navbar-header" data-turbolinks-permanent>
           <%= raw Setting.navbar_brand_html %>
         </div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar">
+        <button class="navbar-toggler" type="button" data-bs-toggle ="collapse" data-target="#main-navbar">
           <span class="navbar-toggler-icon"><i class="fa fa-bars"></i></span>
         </button>
         <div id="main-navbar"  class="collapse navbar-collapse">
