--- a/app/views/settings/account.html.erb
+++ b/app/views/settings/account.html.erb
@@ -1,15 +1,13 @@
 <div class="row">
   <%= render 'menu' %>
-
   <div class="col-md-10">
     <div class="card card-lg">
       <div class="card-body">
         <div class="card-section delete-account">
           <div class="heading"><%= t("users.delete_account") %></div>
-
           <%= form_for(@user, url: setting_path, method: :delete) do |f| %>
             <%= render "shared/error_messages", :target => resource if params[:by] == "destroy" %>
-            <input type="hidden" name="by" value="destroy" />
+            <input type="hidden" name="by" value="destroy">
             <div class="form-group">
               <%= t("users.delete_account_tips_html") %>
             </div>
@@ -19,19 +17,19 @@
             <%= f.submit t("users.ensure_to_delete"), :class => "btn btn-danger", 'data-disable-with' => t("common.submitting") %>
           <% end %>
         </div>
-
         <% if !Setting.sso_enabled? && @user.authorizations.any? %>
           <div class="card-section authorizations">
             <div class="heading"><%= t("users.bind_another_account") %></div>
-
-            <ul class="list-group col-sm-6">
-              <% @user.authorizations.each do |authorizaion| %>
-              <li class="list-group-item">
-                <%= Homeland::Utils.omniauth_name(authorizaion.provider) %>
-                <%= link_to(raw('<i class="fas fa-minus-circle"></i>'), auth_unbind_setting_path(authorizaion.provider), rel: "twitsy", title: ("users.click_to_unbind"), method: 'delete' )%>
-              </li>
-              <% end %>
-            </ul>
+            <div class="d-block d-md-flex d-grid">
+              <div class="btn-group">
+                <% @user.authorizations.each do |authorizaion| %>
+                  <%= link_to auth_unbind_setting_path(authorizaion.provider), class: "btn btn-outline-warning", title: ("users.click_to_unbind"), method: 'delete' do %>
+                    <i class="fas fa-minus-circle"></i>
+                    <%= Homeland::Utils.omniauth_name(authorizaion.provider) %>
+                  <% end %>
+                <% end %>
+              </div>
+            </div>
           </div>
         <% end %>
       </div>
