--- a/app/views/settings/profile.html.erb
+++ b/app/views/settings/profile.html.erb
@@ -5,7 +5,7 @@
       <div class="card-body">
         <%= form_for @user, url: setting_path, method: :put, html: { enctype: "multipart/form-data" } do |f| %>
           <%= render "shared/error_messages", target: @user %>
-          <input type="hidden" name="by" value="profile" />
+          <input type="hidden" name="by" value="profile">
           <% if Setting.has_profile_field? :location %>
             <div class="form-group">
               <%= f.label :location %>
@@ -22,7 +22,7 @@
             <div class="form-group">
               <%= f.label :github %>
               <div class="input-group">
-                <span class="input-group-prepend"><span class="input-group-text">https://github.com/</span></span>
+                <span class="input-group-text">https://github.com/</span>
                 <%= f.text_field :github, class: "form-control" %>
               </div>
             </div>
@@ -31,7 +31,7 @@
             <div class="form-group">
               <%= f.label :twitter %>
               <div class="input-group">
-                <span class="input-group-prepend"><span class="input-group-text">https://twitter.com/</span></span>
+                <span class="input-group-text">https://twitter.com/</span>
                 <%= f.text_field :twitter, class: "form-control" %>
               </div>
             </div>
@@ -48,10 +48,10 @@
               field_prefix = Profile.contact_field_prefix(field)
             %>
             <div class="form-group form-group-profile-field-<%= field %>">
-              <label for="user_profile_<%= field %>"><%= Profile.contact_field_label(field) %></label>
+              <label class="form-label" for="user_profile_<%= field %>"><%= Profile.contact_field_label(field) %></label>
               <% if field_prefix %>
                 <div class="input-group">
-                  <span class="input-group-prepend"><span class="input-group-text"><%= field_prefix %></span></span>
+                  <span class="input-group-text"><%= field_prefix %></span>
                 <% end %>
                 <input class="form-control" type="text" value="<%= @user.profile_field(field) %>" name="user_profile[<%= field %>]" id="user_profile_<%= field %>">
                 <% if field_prefix %></div>
