--- a/app/views/settings/show.html.erb
+++ b/app/views/settings/show.html.erb
@@ -1,6 +1,5 @@
 <div class="row">
   <%= render 'menu' %>
-
   <div class="col-md-10">
     <div class="card card-lg">
       <div class="card-body">
@@ -11,40 +10,34 @@
               <div class="card-section">
                 <% if Setting.allow_change_login? %>
                   <div class="form-group">
-                    <label class="control-label"><%= t("activerecord.attributes.user.login") %></label>
+                    <label class="form-label"><%= t("activerecord.attributes.user.login") %></label>
                     <%= f.text_field :login, style: "width: 200px", class: "form-control", placeholder: t("activerecord.attributes.user.login") %>
                   </div>
-                  <% end %>
-
+                <% end %>
+                <div class="form-group">
+                  <label class="form-label"><%= t("activerecord.attributes.user.name") %></label>
+                  <%= f.text_field :name, style: "width: 200px", class: "form-control", placeholder: t("activerecord.attributes.user.name") %>
+                </div>
+                <div class="form-group">
+                  <label class="form-label"><%= t("activerecord.attributes.user.avatar") %></label>
+                  <%= f.file_field :avatar, class: "form-control" %>
+                </div>
+                <div class="form-group">
+                  <label class="form-label">Email</label>
+                  <%= f.text_field :email, disabled: @user.email_locked?, class: "form-control", placeholder: "Email" %>
+                </div>
+                <div class="form-group form-check">
+                  <label for="user_email_public" class="form-check-label">
+                    <%= f.check_box :email_public, class: "form-check-input" %> <%= t("users.email_permission")%>
+                  </label>
+                </div>
+                <% if Setting.has_profile_field? :tagline %>
                   <div class="form-group">
-                    <label class="control-label"><%= t("activerecord.attributes.user.name") %></label>
-                    <%= f.text_field :name, style: "width: 200px", class: "form-control", placeholder: t("activerecord.attributes.user.name") %>
+                    <%= f.label :tagline %>
+                    <%= f.text_field :tagline, class: "form-control" %>
                   </div>
-
-                  <div class="form-group">
-                    <label class="control-label"><%= t("activerecord.attributes.user.avatar") %></label>
-                    <%= f.file_field :avatar, class: "form-control" %>
-                  </div>
-
-                  <div class="form-group">
-                    <label class="control-label">Email</label>
-                    <%= f.text_field :email, disabled: @user.email_locked?, class: "form-control", placeholder: "Email" %>
-                  </div>
-
-                  <div class="form-group form-check">
-                    <label for="user_email_public" class="form-check-label">
-                      <%= f.check_box :email_public, class: "form-check-input" %> <%= t("users.email_permission")%>
-                    </label>
-                  </div>
-
-                  <% if Setting.has_profile_field? :tagline %>
-                    <div class="form-group">
-                      <%= f.label :tagline %>
-                      <%= f.text_field :tagline, class: "form-control" %>
-                    </div>
-                  <% end %>
+                <% end %>
               </div>
-
               <div class="card-section themes">
                 <div class="heading"><%= t("activerecord.attributes.user.theme") %></div>
                 <div class="flex aic">
