--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,10 +1,12 @@
 <% if target.errors.any? %>
   <div class="alert alert-block alert-danger">
-    <a class="close" data-dismiss='alert' href="#">×</a>
-    <div><strong><%= t("common.error_message_title", count: target.errors.count) %></strong></div>
+    <div class="d-flex jcsb">
+      <strong><%= t("common.error_message_title", count: target.errors.count) %></strong>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
     <ul>
       <% target.errors.full_messages.each do |msg| %>
-       <li><%= msg %></li>
+        <li><%= msg %></li>
       <% end %>
     </ul>
   </div>
