--- a/app/views/shared/_usernav.html.erb
+++ b/app/views/shared/_usernav.html.erb
@@ -8,10 +8,10 @@
       <a href="<%= main_app.notifications_path %>" class="nav-link <%= badge_class %>" title="<%= t("common.notifications") %>"><i class="fa fa-bell"></i><span class="count"><%= unread_notify_count %></span></a>
     </li>
     <li class="nav-item dropdown">
-      <a href="#" id="navbar-new-menu" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <a href="#" id="navbar-new-menu" class="nav-link dropdown-toggle" role="button" data-bs-toggle ="dropdown" aria-haspopup="true" aria-expanded="false">
         <i class="fa fa-plus"></i>
       </a>
-      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-new-menu">
+      <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbar-new-menu">
         <%= link_to t("topics.new_topic"), main_app.new_topic_path, class: "dropdown-item" %>
         <% if can?(:create, Team) && Setting.has_module?(:team) %>
           <div class="dropdown-divider"></div>
@@ -22,10 +22,10 @@
   <% end %>
   <% if current_user %>
     <li class="nav-item dropdown dropdown-avatar">
-      <a href="#" class="dropdown-toggle nav-link" id="navbar-user-menu" data-toggle="dropdown" role="button" aria-expanded="false">
+      <a href="#" class="dropdown-toggle nav-link" id="navbar-user-menu" data-bs-toggle ="dropdown" role="button" aria-expanded="false">
         <%= user_avatar_tag(current_user, :sm, link: false) %>
       </a>
-      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-user-menu">
+      <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbar-user-menu">
         <%= link_to current_user.login, main_app.user_path(current_user), class: "dropdown-item" %>
         <%= link_to t("menu.likes"), main_app.favorites_user_path(current_user), class: "dropdown-item" %>
         <div class="dropdown-divider"></div>
