--- a/app/views/team_users/edit.html.erb
+++ b/app/views/team_users/edit.html.erb
@@ -1,14 +1,10 @@
 <% title_tag t("teams.edit_team_user") %>
-
 <%= render '/teams/header' %>
-
 <div class="card team-users">
   <div class="card-body">
-    <div class="row">
-      <div class="col-md-6 col-sm-offset-3">
-        <h3><%= t("teams.edit_team_user") %></h3>
-        <%= render '/team_users/form' %>
-      </div>
+    <div class="col-md-7 mx-auto">
+      <h3 class="mb-3"><%= t("teams.edit_team_user") %></h3>
+      <%= render '/team_users/form' %>
     </div>
   </div>
 </div>
