--- a/app/views/team_users/show.html.erb
+++ b/app/views/team_users/show.html.erb
@@ -1,6 +1,5 @@
 <% title_tag t("teams.show_team_user") %>
 <%= render '/teams/header' %>
-
 <div class="card team-users">
   <div class="card-body">
     <div class="row">
@@ -11,7 +10,7 @@
         </p>
         <div class="buttons">
           <%= link_to t('teams.accept_team_user'), accept_user_team_user_path(@team, @team_user), data: { method: 'POST' }, class: 'btn btn-primary' %>
-          <%= link_to t('teams.reject_team_user'), reject_user_team_user_path(@team, @team_user), data: { method: 'POST' }, class: 'btn btn-default' %>
+          <%= link_to t('teams.reject_team_user'), reject_user_team_user_path(@team, @team_user), data: { method: 'POST' }, class: 'btn btn-secondary' %>
         </div>
       </div>
     </div>
