--- a/app/views/topics/_node_info.html.erb
+++ b/app/views/topics/_node_info.html.erb
@@ -7,7 +7,7 @@
           <span class="total"><%= t("topics.total_topics_html", count: node.topics_count) %></span>
           <div class="pull-right">
             <% if node.collapse_summary? %>
-              <a class="btn btn-sm btn-default" data-toggle="collapse" href="#node-summary"><i class="fa fa-lightbulb-o"></i></a>
+              <a class="btn btn-sm btn-secondary" data-bs-toggle ="collapse" href="#node-summary"><i class="fa fa-lightbulb-o"></i></a>
             <% end %>
             <%= block_node_tag(node) %>
           </div>
